"""docker-platform-monitor — SONiC platform monitoring (pmon) (hermetic)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "pmon_config_layer",
    srcs = glob(["*.sh", "*.j2", "*.conf", "*.py", "critical_processes"], allow_empty = True),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_platform_monitor",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [":pmon_config_layer"],
    labels = {
        "org.opencontainers.image.title": "docker-platform-monitor",
        "sonic.container.name": "pmon",
    },
)
