"""docker-ptf-sai — SAI PTF test container (placeholder).

Used for SAI conformance testing with PTF framework.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "ptf_sai_config_layer",
    srcs = glob(["*.sh", "*.conf", "*.py"], allow_empty = True),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_ptf_sai",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [":ptf_sai_config_layer"],
    labels = {"org.opencontainers.image.title": "docker-ptf-sai"},
)
