load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "router_advertiser_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_router_advertiser",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":router_advertiser_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-router-advertiser",
        "sonic.container.name": "radv",
    },
)
