"""docker-sflow — SONiC sFlow sampling agent service container.

Phase 2: collapsed from the 5-deep Make chain to 3 layers:
  distroless/base-debian12 -> sonic-common-layer -> sonic-swss-layer -> this image

Layer accounting:
  Layer 0: gcr.io/distroless/base-debian12           ~20 MB   (upstream, pinned)
  Layer 1: //dockers/sonic-common-layer               ~130 MB  (supervisord, libs)
  Layer 2: //dockers/docker-swss-layer-bullseye       ~120 MB  (libswsscommon+sairedis)
  Layer 3: THIS FILE                                  ~25 MB   (hsflowd + configs)
  Total:                                              ~295 MB  (< 300 MB budget)
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "apt_install_layer", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# -- apt runtime packages layer ------------------------------------------------

apt_install_layer(
    name = "sflow_apt_layer",
    packages = [
        "dmidecode",
    ],
    size_budget_mb = 250,
)

# -- swss binary layer ---------------------------------------------------------

deb_extract_layer(
    name = "sflow_binary_layer",
    debs = [
        "//src/sonic-swss:swss_deb",
    ],
    size_budget_mb = 250,
)

# -- config + scripts layer ----------------------------------------------------

pkg_tar(
    name = "sflow_config_layer",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "port_index_mapper.py",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "port_index_mapper.py": "/usr/bin/port_index_mapper.py",
    },
    mode = "0755",
)

# -- docker-sflow OCI image ---------------------------------------------------

sonic_oci_image(
    name = "docker_sflow",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":sflow_apt_layer",
        ":sflow_binary_layer",
        ":sflow_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-sflow",
        "org.opencontainers.image.description": "SONiC sFlow sampling agent",
        "sonic.container.name": "sflow",
    },
)
