load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "sflow_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_sflow",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":sflow_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-sflow",
        "sonic.container.name": "sflow",
    },
)
