"""docker-snmp — SONiC SNMP agent service container (hermetic apt + custom .debs)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

# ── Apt packages layer (hermetic @bookworm) ─────────────────────────────────

slim_apt_layer(
    name = "snmp_apt_slim",
    srcs = [
        "@bookworm_python3-yaml_6.0-3-p-b2_amd64//:data",
    ],
)

# ── Service debs layer ───────────────────────────────────────────────────────
# TODO: Convert //src/snmpd:snmpd_debs to hermetic @bookworm packages
#       once snmpd is declared in MODULE.bazel.

deb_extract_layer(
    name = "snmp_binary_layer",
    debs = [
        "//src/snmpd:snmpd_debs",
    ],
    size_budget_mb = 250,
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "snmp_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
            "critical_processes",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

# ── docker-snmp OCI image ───────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_snmp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":snmp_apt_slim",
        ":snmp_binary_layer",
        ":snmp_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-snmp",
        "sonic.container.name": "snmp",
    },
)
