"""docker-snmp — SONiC SNMP agent service container.

Hermetic build: snmpd from @bookworm apt packages (no source build needed).
sonic-snmpagent Python package from source.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

# ── Apt packages layer (hermetic @bookworm) ────────────────────────────────
slim_apt_layer(
    name = "snmp_apt_slim",
    srcs = [
        "@bookworm_python3-yaml_6.0-3-p-b2_amd64//:data",
        "@bookworm_python3-netifaces_0.11.0-2-p-b1_amd64//:data",
    ],
)

# ── swsscommon deb layer (needed for SNMP Redis access) ────────────────────
genrule(
    name = "snmp_swss_layer",
    srcs = [
        "//build/deb/sonic-swss-common:swss_common",
        "//build/deb/sonic-swss-common:python3_swsscommon",
    ],
    outs = ["snmp_swss_layer.tar"],
    cmd = """\
set -euo pipefail
TMPDIR=$$(mktemp -d)
trap 'rm -rf "$$TMPDIR"' EXIT
for src in $(SRCS); do
    if [ -f "$$src" ]; then
        INNER=$$(mktemp -d)
        ar x "$$src" --output="$$INNER" 2>/dev/null || true
        for dt in "$$INNER"/data.tar.*; do
            [ -f "$$dt" ] && tar xf "$$dt" -C "$$TMPDIR" 2>/dev/null || true
        done
        rm -rf "$$INNER"
    fi
done
# Fix usrmerge: move ./bin/, ./sbin/, ./lib/ into ./usr/ to avoid
# shadowing base image symlinks (/bin -> /usr/bin) in OCI layers.
for d in bin sbin lib; do
    if [ -d "$$TMPDIR/$$d" ] && [ ! -L "$$TMPDIR/$$d" ]; then
        mkdir -p "$$TMPDIR/usr/$$d"
        cp -a "$$TMPDIR/$$d/." "$$TMPDIR/usr/$$d/" 2>/dev/null || true
        rm -rf "$$TMPDIR/$$d"
    fi
done
COPYFILE_DISABLE=1 tar cf "$@" -C "$$TMPDIR" .
""",
    tags = [],
)

# ── Config + scripts layer ─────────────────────────────────────────────────
pkg_tar(
    name = "snmp_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
            "critical_processes",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

# ── docker-snmp OCI image ─────────────────────────────────────────────────
sonic_oci_image(
    name = "docker_snmp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":snmp_apt_slim",
        ":snmp_swss_layer",
        ":snmp_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-snmp",
        "sonic.container.name": "snmp",
    },
)
