"""docker-sonic-bmp — SONiC BMP (BGP Monitoring Protocol) service container.

Phase 2: collapsed to sonic-common-layer base.
Provides the BMP daemon binary.
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")

package(default_visibility = ["//visibility:public"])

# ── Service debs layer ───────────────────────────────────────────────────────

genrule(
    name = "bmp_binary_layer",
    srcs = [
        "//src/sonic-bmp:sonic_bmp",
    ],
    outs = ["bmp_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
for deb in $(SRCS); do
    dpkg-deb -x "$$deb" "$$ROOTFS"
done
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "bmp_config_layer",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "bmp.sh",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "bmp.sh": "/usr/bin/bmp.sh",
    },
    mode = "0755",
)

# ── Size budget enforcement ──────────────────────────────────────────────────

stripped_layer(
    name = "bmp_binary_layer_stripped",
    src = ":bmp_binary_layer",
    size_budget_mb = 20,
)

# ── docker-sonic-bmp OCI image ───────────────────────────────────────────────

sonic_oci_image(
    name = "docker_sonic_bmp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":bmp_binary_layer_stripped",
        ":bmp_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-sonic-bmp",
        "org.opencontainers.image.description": "SONiC BMP daemon service",
        "sonic.container.name": "bmp",
    },
)
