"""docker-sonic-bmp — SONiC BMP (BGP Monitoring Protocol) service container (hermetic apt + custom .deb)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# ── Service debs layer ───────────────────────────────────────────────────────
# TODO: Convert //src/sonic-bmp:sonic_bmp to hermetic @bookworm package
#       once sonic-bmp is declared in MODULE.bazel.

deb_extract_layer(
    name = "bmp_binary_layer",
    debs = [
        "//src/sonic-bmp:sonic_bmp",
    ],
    size_budget_mb = 250,
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "bmp_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
            "critical_processes",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

# ── docker-sonic-bmp OCI image ───────────────────────────────────────────────

sonic_oci_image(
    name = "docker_sonic_bmp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":bmp_binary_layer",
        ":bmp_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-sonic-bmp",
        "sonic.container.name": "bmp",
    },
)
